--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,6 @@
-#
-# This file contains configuration flags to customize your site
-#
-
-# Name of your site (displayed in the header)
-name: Your Name
-
-# Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
-
-# URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
-#
-# Flags below are optional
-#
+name: Chennai School of AI
+description: Our mission is to solve humanity's challenging problems using AI.
+avatar: /images/logo.png
 
 # Includes an icon in the footer for each username you enter
 footer-links:
@@ -21,7 +8,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/chnsoai
   instagram:
   linkedin:
   pinterest:
